--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^22.13.8",
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.1",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
@@ -54,6 +55,8 @@
     "next-themes": "^0.4.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
