--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.2.0",
