--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.477.0",
     "next-themes": "^0.4.4",
+    "openai": "^4.87.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
