--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3",
     "tailwindcss-animate": "^1.0.7",
