--- a/vercel.json
+++ b/vercel.json
@@ -1,52 +1,56 @@
 {
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/"
-    },
-    {
-      "src": "/signin",
-      "dest": "/"
-    },
-    {
-      "src": "/signup",
-      "dest": "/"
-    },
-    {
-      "src": "/dashboard",
-      "dest": "/"
-    },
-    {
-      "src": "/assessment",
-      "dest": "/"
-    },
-    {
-      "src": "/challenge",
-      "dest": "/"
-    },
-    {
-      "src": "/chatbot",
-      "dest": "/"
-    },
-    {
-      "src": "/started-workout",
-      "dest": "/"
-    },
-    {
-      "src": "/activity",
-      "dest": "/"
-    },
-    {
-      "src": "/challenges",
-      "dest": "/"
-    },
-    {
-      "src": "/profile",
-      "dest": "/"
-    },
-    {
-      "src": "/auth-redirect",
-      "dest": "/"
-    }
-  ]
+	"routes": [
+		{
+			"src": "/",
+			"dest": "/"
+		},
+		{
+			"src": "/signin",
+			"dest": "/"
+		},
+		{
+			"src": "/signup",
+			"dest": "/"
+		},
+		{
+			"src": "/dashboard",
+			"dest": "/"
+		},
+		{
+			"src": "/assessment",
+			"dest": "/"
+		},
+		{
+			"src": "/challenge",
+			"dest": "/"
+		},
+		{
+			"src": "/chatbot",
+			"dest": "/"
+		},
+		{
+			"src": "/started-workout",
+			"dest": "/"
+		},
+		{
+			"src": "/activity",
+			"dest": "/"
+		},
+		{
+			"src": "/challenges",
+			"dest": "/"
+		},
+		{
+			"src": "/profile",
+			"dest": "/"
+		},
+		{
+			"src": "/auth-redirect",
+			"dest": "/"
+		},
+		{
+			"src": "/fitness",
+			"dest": "/"
+		}
+	]
 }
